# Backtsting-MemeCoin_Bots-Workflow-Framework-Project

./: .gitignore
backtesting-memecoin-dashboard/: next.config.ts  package-lock.json  package.json  test-action.js
backtesting-memecoin-dashboard/src/app/: globals.css  layout.tsx
backtesting-memecoin-dashboard/src/app/actions/: copy-trade-sniper-data.ts  db-ops.ts  docker.ts  early-sniper-data.ts  get-data.ts  graduation-sniper-data.ts  insider-data.ts  milestone-data.ts  volume-data.ts
backtesting-memecoin-dashboard/src/app/copy-trade-protocol/: page.tsx
backtesting-memecoin-dashboard/src/app/early-sniper-protocol/: page.tsx
backtesting-memecoin-dashboard/src/app/ghost-protocol/: page.tsx
backtesting-memecoin-dashboard/src/app/graduation-protocol/: page.tsx
backtesting-memecoin-dashboard/src/app/insider-protocol/: page.tsx
backtesting-memecoin-dashboard/src/app/milestone-protocol/: page.tsx
backtesting-memecoin-dashboard/src/app/volume-protocol/: page.tsx
backtesting-memecoin-dashboard/src/components/dashboard/: bot-header.tsx  copy-trade-bot-vertical-stack.tsx  copy-trade-exposure-table.tsx  copy-trade-header.tsx  copy-trade-history-table.tsx  copy-trade-metrics-card.tsx  copy-trade-signal-feed.tsx  copy-trade-trigger-table.tsx  copy-trade-wallet-manager.tsx  early-bot-vertical-stack.tsx  early-exposure-table.tsx  early-header.tsx  early-metrics-card.tsx  early-trigger-table.tsx  fleet-control.tsx  graduation-bot-vertical-stack.tsx  graduation-exposure-table.tsx  graduation-header.tsx  graduation-metrics-card.tsx  graduation-signal-feed.tsx  graduation-trigger-table.tsx  incubation-table.tsx  insider-bot-brain.tsx  insider-exposure-table.tsx  insider-fleet-control.tsx  insider-header.tsx  insider-history-table.tsx  insider-logs.tsx  insider-pnl-chart.tsx  insider-stats.tsx  insider-watchlist-table.tsx  live-exposure-table.tsx  live-stats.tsx  milestone-fleet-control.tsx  milestone-header.tsx  milestone-rejected-table.tsx  milestone-stats.tsx  milestone-target-table.tsx  shadow-board.tsx  sidebar.tsx  (+11 more)
backtesting-memecoin-dashboard/src/lib/: db.ts  redis.ts
copy_trade_protocol/: System_Architecture_Summary.md  System_Flow.md  active_wallet_hunter.js  debug_dex.js  docker-compose.yml  elite_wallet_discovery.js  final_winners_hunter.js  package-lock.json  package.json  probe_gmgn.js  profitable_wallet_hunter.js  test_api.js  wallet_hunter.js  wallet_hunter.ts
copy_trade_protocol/copy_trade_scout/: Cargo.toml  Dockerfile
copy_trade_protocol/copy_trade_scout/src/: key_manager.rs  main.rs
copy_trade_protocol/copy_trade_sniper/: Cargo.toml  Dockerfile
copy_trade_protocol/copy_trade_sniper/src/: main.rs
copy_trade_protocol/database/: init.sql
early_sniper_protocol/: docker-compose.yml
early_sniper_protocol/early_db/: init.sql
early_sniper_protocol/early_scout/: Cargo.toml  Dockerfile
early_sniper_protocol/early_scout/src/: main.rs
early_sniper_protocol/early_sniper/: Cargo.toml  Dockerfile
early_sniper_protocol/early_sniper/src/: main.rs
early_sniper_protocol/early_watcher/: Cargo.toml  Dockerfile
early_sniper_protocol/early_watcher/src/: main.rs
ghost_protocol/database/: init.sql
ghost_protocol/ghost_evaluator/: .dockerignore  Cargo.toml  Dockerfile
ghost_protocol/ghost_evaluator/src/: main.rs
ghost_protocol/ghost_scout/: Cargo.toml  Dockerfile
ghost_protocol/ghost_scout/src/: main.rs
ghost_protocol/ghost_sniper/: Cargo.toml  Dockerfile
ghost_protocol/ghost_sniper/src/: main.rs  monitor.rs
graduation_protocol/: .env.example  docker-compose.yml
graduation_protocol/database/: init.sql  wallet_migration.sql
graduation_protocol/graduation_scout/: Cargo.toml  Dockerfile
graduation_protocol/graduation_scout/src/: main.rs
graduation_protocol/graduation_sniper/: Cargo.toml  Dockerfile
graduation_protocol/graduation_sniper/src/: main.rs  monitor.rs
insider_protocol/: System_Architecture_Summary.md  System_Flow.md  analisis.md  docker-compose.yml  refresh_system.sh
insider_protocol/database/: init.sql
insider_protocol/insider_scout/: Cargo.toml
insider_protocol/insider_scout/src/: main.rs
insider_protocol/insider_sniper/: Cargo.toml
insider_protocol/insider_sniper/src/: main.rs
insider_protocol/insider_watcher/: Cargo.toml  Dockerfile
insider_protocol/insider_watcher/src/: main.rs
insider_protocol/scripts/: force_trigger.py  health_check.py
milestone_protocol/: docker-compose.yml  docker-compose.yml.tmp
milestone_protocol/database/: init.sql
milestone_protocol/milestone_scout/: Cargo.toml  Dockerfile
milestone_protocol/milestone_scout/src/: key_manager.rs  main.rs
milestone_protocol/milestone_sniper/: Cargo.toml  Dockerfile
milestone_protocol/milestone_sniper/src/: main.rs  monitor.rs
milestone_protocol/scripts/: health_check.py
volume_protocol/: docker-compose.yml
volume_protocol/volume_scout/: Dockerfile
volume_protocol/volume_scout/src/: main.rs
volume_protocol/volume_sniper/: Dockerfile
volume_protocol/volume_sniper/src/: main.rs
volume_protocol/volume_watcher/src/: main.rs
