[package]
name = "copy_trade_sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "async-std-comp"] }
getrandom = "0.2"
time = "=0.3.36"
futures-util = "0.3"
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
