[package]
name = "early_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
futures-util = "0.3"
env_logger = "0.10"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
