[package]
name = "insider_scout"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "async-std-comp"] }
getrandom = "0.2"
time = "=0.3.36"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
url = "2.5"
env_logger = "0.11"
log = "0.4"
